# node-exporter-operator

./: Makefile  README.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt
src/: charm.py  prometheus_node_exporter.py
tests/integration/: test_charm.py
tests/unit/: requirements.txt  test_charm.py
