[project]
name = "prometheus-node-exporter"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "cosl>=0.0.53",
    "Jinja2",
    "ops>=2,<4",
]

[dependency-groups]
unit = [
    "coverage[toml]",
    "ops[testing]>=2,<4",
    "pytest",
]
integration = [
    "pytest",
    "pytest-cov",
    "pytest-operator",
    "requests",
]
dev = [
    "coverage[toml]",
    "ops[testing]>=2,<4",
    "pytest",
    "pytest-cov",
    "pytest-operator",
    "requests",
]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src", "lib"]
